--- a/styles.css
+++ b/styles.css
@@ -70,11 +70,11 @@ p {
     filter: blur(30px);
 }
 
-#copyright p {
+.copyright p {
     text-align: center;
     padding-top: 10px;
 }
 
-#copyright a {
+.copyright a {
     color: #86cef2;
 }
